syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service SocialService {
  rpc AddFollower(AddFollowerRequest) returns (AddFollowerResponse) {}
  rpc RemoveFollower(RemoveFollowerRequest) returns (RemoveFollowerResponse) {}
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse) {}
  rpc CountFollowers(CountFollowersRequest) returns (CountFollowersResponse) {}
}

// AddFollowerRequest
message AddFollowerRequest {
  string followee = 1;
  string follower = 2;
  string username = 3;
  string avatar = 4;
}

message AddFollowerResponse {
  int64 status = 1;
  string error = 2;
}

// RemoveFollower
message RemoveFollowerRequest {
  //TODO:
}

message RemoveFollowerResponse {
  int64 status = 1;
  string error = 2;
}

// Get followers
message GetFollowersRequest {
  //TODO:
}

message GetFollowersResponse {
  int64 status = 1;
  string error = 2;
}

// CountFollowers
message CountFollowersRequest {
  //TODO:
}

message CountFollowersResponse {
  int64 status = 1;
  string error = 2;
}
